RESOLVED FIXED 255530
[css-nesting] Fix nested at-rules parsing when inserted with CSSOM
https://bugs.webkit.org/show_bug.cgi?id=255530
Summary [css-nesting] Fix nested at-rules parsing when inserted with CSSOM
Matthieu Dubet
Reported 2023-04-17 10:03:17 PDT
CSSOM can start inserting/parsing an at-rule already in a nested context (bypass the "normal" nested stack). https://github.com/WebKit/WebKit/blob/main/LayoutTests/imported/w3c/web-platform-tests/css/css-nesting/cssom-expected.txt#L9
Attachments
Matthieu Dubet
Comment 1 2023-04-17 10:03:34 PDT
Matthieu Dubet
Comment 2 2023-04-17 10:08:37 PDT
EWS
Comment 3 2023-04-17 11:27:22 PDT
Committed 263028@main (ab88221743a9): <https://commits.webkit.org/263028@main> Reviewed commits have been landed. Closing PR #12810 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.