Cherry-pick ab88221743a9. rdar://problem/107760234

[CSS Nesting] Fix parsing of nested at-rules with CSSOM
    https://bugs.webkit.org/show_bug.cgi?id=255530
    rdar://107760234

    Reviewed by Antti Koivisto.

    CSS OM insertion can "bypass" the normal stack by inserting at an arbitrarily
    deeply nested context.
    We already have isNestedContext() function to check for this, but it was
    not used here unfortunately.

    * LayoutTests/imported/w3c/web-platform-tests/css/css-nesting/cssom-expected.txt:
    * Source/WebCore/css/parser/CSSParserImpl.cpp:
    (WebCore::CSSParserImpl::consumeQualifiedRule):
    (WebCore::CSSParserImpl::consumeRegularRuleList):
    (WebCore::CSSParserImpl::consumeDeclarationListOrStyleBlockHelper):

    Canonical link: https://commits.webkit.org/263028@main

Identifier: 259548.654@safari-7615-branch